fix alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,13 @@ code {
 
 
 .header-bar {
-  box-shadow: 0 3px 5px rgb(209, 203, 203);
   height: 60px;
-  margin: 10px 0 10px 0; 
   display: flex;
+
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1500px;
   justify-content: space-between;
-  padding-left: 8rem;
-  padding-right: 3rem;
 }
 
 .header-bar-search {
@@ -33,6 +33,7 @@ code {
   -webkit-appearance: none; 
   -moz-appearance: none; 
   border: 2px solid #eee;
+  height: 70%;
 }
 
 .right-button-group {
@@ -76,43 +77,20 @@ code {
 .dashboard-group {
   display: flex;
   width: 100%;
-  justify-content: space-around;
   padding-top: 45px;
+
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1500px;
 }
 
 .watchlist-wrapper {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-
-/* .btn {
-  display: inline-block;
-  background: rgb(75, 190, 248);
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  margin: 5px;
-  border-radius: 5px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 15px; 
-  font-family: inherit;
-
-  transition: background 0.5s ease-in-out;
-}
-
-.btn:hover {
-  background: rgb(95, 3, 0);
-}
-
-.btn:active {
-  opacity: 40%;
-} */
-
 .graph-period {
   display: flex;
 }
-
 
 
 .increase-arrow {
@@ -188,7 +166,7 @@ code {
 
 .crb {
   text-decoration: none;
-  color: black;
+  color: #666565;
 }
 
 .button-container ul {
@@ -214,7 +192,7 @@ code {
   border-radius: 4px 4px 0 0;
   content: "";
   display: block;
-  margin-top: 10px;
+  margin-top: black10px;
   height: 4px;
 }
 .tabactive > a {
